# ann

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  ann.py  build-cpu  cuda-memcheck-script  debug-script  debug-script-cpu  debug-script-gpu  docker-build-image  docker-run-container  release-script
benchmarks/: CMakeLists.txt  dense_mlp_benchmarks.cc
cmake/ExternalProjects/: CMakeLists.txt.in.gbench
cmake/Modules/: FindMKL.cmake
examples/: CMakeLists.txt
examples/multi_layer_perceptron/: CMakeLists.txt
examples/multi_layer_perceptron/logic_gates/: .gitignore  gate.py  logic_gates.cc
examples/multi_layer_perceptron/quadrants/: .gitignore  quadrants.py
include/ann/: activation.hh  ann.hh  error.hh  ffn.cuh  function_space.hh  host_members.hh  layer.hh  loss_function.hh  matrix_ops.cuh  optimizer.hh  random_input.hh  typedefs.cuh
include/ann/ext/: activation.tcc  ann.tcc  layer.tcc  loss_function.tcc  optimizer.tcc
include/ann/models/: ann_mlp.hh  multi_layer_perceptron.hh
include/ann/models/ext/: ann_mlp.tcc  multi_layer_perceptron.tcc
src/: CMakeLists.txt  activation.cu  ann.cu  error.cc  layer.cu  loss_function.cu  optimizer.cu
src/cpu/: activation.cc  ann.cc  optimizer.cc
src/gpu/: ann.cu
test/: CMakeLists.txt  activation_test.cc  ann_test.cc  ffn_test.cc  layer_test.cc  loss_function_test.cc
test/cpu_unit_tests/: activation_test.cc  ann_test.cc  ffn_test.cc  layer_test.cc  loss_function_test.cc  multi_layer_perceptron_test.cc  optimizer_test.cc  run_all.cc
test/gpu_unit_tests/: loss_function_test.cc
unit_tests/: CMakeLists.txt
unit_tests/cpu_unit_tests/: activation_test.cc  ann_mlp_test.cc  ann_test.cc  layer_test.cc  loss_function_test.cc  multi_layer_perceptron_test.cc  optimizer_test.cc  run_all.cc
unit_tests/gpu_unit_tests/: ffn_test.cc  optimizer_test.cc  run_all.cc
